config for java

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,7 +115,7 @@
     "editor.guides.bracketPairs": "active",
     "code-runner.executorMap": {
         "javascript": "node",
-        "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
+        "java": "cd $dir && javac $fileName && java  $fileNameWithoutExt < input.txt > output.txt" ,
         "c": "cd $dir && gcc $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
         "zig": "zig run",
         "cpp": "cd $dir && g++ $fileName -g -Wall -std=c++17 -o $fileNameWithoutExt && $dir$fileNameWithoutExt < input.txt > output.txt",
@@ -207,4 +207,8 @@
         ".sml": "cd $dir && sml $fileName",
         ".mojo": "mojo run"
     },
+    "files.exclude": {
+        "**/*.class": true,
+        "**/*.dSYM":true,
+    }
 }
